--- a/package.json
+++ b/package.json
@@ -13,13 +13,20 @@
     "test:coverage": "nyc yarn test"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^7.6.3",
+    "bull": "^3.27.0",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "5.10.18",
+    "nodemailer": "^6.6.3"
   },
   "devDependencies": {
+    "@types/bull": "^3.15.3",
     "@types/chai": "^4.2.21",
     "@types/express": "^4.17.13",
     "@types/mocha": "^9.0.0",
+    "@types/mongoose": "^5.11.97",
+    "@types/nodemailer": "^6.4.4",
     "@types/sinon": "^10.0.2",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
