--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "dev": "npm-run-all -p dev:*",
     "dev:server": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts",
     "dev:queue": "tsnd src/queue.ts",
     "build": "rm -rf dist; tsc",
@@ -14,6 +15,8 @@
     "test:coverage": "nyc yarn test"
   },
   "dependencies": {
+    "@bull-board/api": "^3.3.1",
+    "@bull-board/express": "^3.3.1",
     "@typegoose/typegoose": "^7.6.3",
     "bull": "^3.27.0",
     "dotenv": "^10.0.0",
@@ -37,6 +40,7 @@
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.23.4",
     "mocha": "^9.0.3",
+    "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "sinon": "^11.1.2",
     "ts-node-dev": "^1.1.8",
