--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bull": "^3.27.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "ioredis": "^4.27.6",
     "mongoose": "5.10.18",
     "nodemailer": "^6.6.3"
   },
